kustomize/gitea/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-lb
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.93.88
  externalTrafficPolicy: Local
  ports:
  - name: ssh-git
    port: 3001
    protocol: TCP
    targetPort: 3001
