kustomize/gitea/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt
    cert-manager.io/revision-history-limit: "1"
spec:
  ingressClassName: contour
  rules:
  - host: git.tools.kilchhofer.info
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: gitea
            port:
              name: http-gui
  tls:
  - hosts:
    - git.tools.kilchhofer.info
    secretName: git-ingress-cert
