kustomize/gitea/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gitea
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: gitea
  policyTypes:
    - Egress
    - Ingress
  egress:
    - ports:
        # Mirror GitHub repos
      - port: 443
        protocol: TCP
        # Notification via E-Mail
      - port: 587
        protocol: TCP
      - port: 465
        protocol: TCP
  ingress:
    - ports:
      - port: http-gui
        protocol: TCP
      - port: ssh-git
        protocol: TCP
